# wordcounter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: wordcount.py
app/core/: config.py  events.py
app/db/: session.py
app/db/repositories/: base.py  url.py  wordcount.py
app/models/domain/: url.py  wordcount.py
app/models/schemas/: wordcount.py
app/services/: scraper.py
tests/: test_api.py  test_cases.py  test_scraper.py
