[tool.poetry]
name = "wordcounter"
version = "1.0.0"
description = ""
authors = ["Joyce Piscos"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
loguru = "^0.5.3"
pydantic = "^1.8.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.26.0"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.22"
aiosqlite = "^0.17.0"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
